--- a/portfolio.html
+++ b/portfolio.html
@@ -214,7 +214,7 @@
     <!--Підвал проекту-->
     <footer class="footer">
         <div class="container footer-contacts-social">
-            <div>
+            <div class="footer-logo-contacts">
                 <a class="logo-footer" href="./index.html">
                     <span class="part-logo">Web</span>Studio</a>
                 <address>
@@ -261,6 +261,20 @@
                         </a>
                     </li>
                 </ul>
+            </div>
+            <div class="footer-form">
+                <p class="footer-form-title">Підпишіться на розсилку</p>
+                <form class="footer-form-subscribe">
+                    <label class="footer-form-field">
+                        <input type="email" name="user_email" class="footer-form-input" placeholder="E-mail" required>
+                    </label>
+                    <button type="submit" class="footer-form-submit">
+                        <span>Підписатися</span>
+                        <svg class="footer-form-submit-icon" width="24" height="24">
+                            <use aria-label="іконка відправки листа" href="./images/icon/sprite.svg#icon-send"></use>
+                        </svg>
+                    </button>
+                </form>
             </div>
         </div>
     </footer>
