--- a/portfolio.html
+++ b/portfolio.html
@@ -55,7 +55,7 @@
                 <div class="container">
                     <h1 class="visually-hidden">Приклади проектів</h1>
                     <ul class="list filter">
-                        <li class="item"><button type="button">Усі</button></li>
+                        <li class="item"><button type="button" class="current">Усі</button></li>
                         <li class="item"><button type="button">Веб-сайти</button></li>
                         <li class="item"><button type="button">Додатки</button></li>
                         <li class="item"><button type="button">Дизайн</button></li>
